[package]
name = "doom-2038"
version = "1.2.3"
edition = "2024"
authors = ["Edward <edwardstrowaway@gmail.com>"]
description = "Doom is impending; be happy while you still can. 03:14:07 UTC 19 January 2038."
license = "Unlicense"
repository = "https://github.com/SDEdward/doom-2038"
homepage = "https://sdeward.github.io/doom-2038"
readme = "../README.md"
keywords = ["2038", "countdown", "cli", "fun", "year-2038-problem"]
categories = ["command-line-utilities", "date-and-time"]

[dependencies]
